<resources>
    <string name="app_name">Smart Agriculture</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop recording</string>
    <string name="specs">Specs</string>
    <string name="output">Output</string>
    <string name="smart_agriculture">SMART AGRICULTURE</string>
    <string name="water_pump">Water Pump</string>
    <string name="weather">Weather</string>
    <string name="description">description</string>
    <string name="day">day</string>
    <string name="water_pump_status">Water Pump Status</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="weather_toggle">Weather</string>
    <string name="intrusionDetector">Status</string>
    <string name="audioToText">Initiate</string>
    <string name="warning">WARNING</string>
    <string name="status">Status</string>
</resources>