<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/save_current_stats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/agriculture"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="405dp"
                    android:layout_height="876dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@drawable/top_backround"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/factory" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/smart_agriculture"
                        android:textColor="@color/white"
                        android:textSize="26dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageView3"
                        app:layout_constraintStart_toStartOf="@+id/imageView3"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="650dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="20dp"
                        android:elevation="3dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:layout_weight="0.5"
                                android:background="@color/weed"
                                android:elevation="3dp"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_margin="25dp"
                                    android:background="@drawable/cirle_backround">

                                    <ImageView
                                        android:id="@+id/HumidityImage"
                                        android:layout_width="100dp"
                                        android:layout_height="100dp"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        app:srcCompat="@drawable/humidity" />

                                </androidx.constraintlayout.widget.ConstraintLayout>

                                <TextView
                                    android:id="@+id/humidityText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="1dp"
                                    android:text="Humidity"
                                    android:textAlignment="center"
                                    android:textSize="20dp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:layout_weight="0.5"
                                android:background="@color/weed"
                                android:elevation="3dp"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_margin="25dp"
                                    android:background="@drawable/cirle_backround">

                                    <ImageView
                                        android:id="@+id/temperatureImage"
                                        android:layout_width="100dp"
                                        android:layout_height="100dp"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        app:srcCompat="@drawable/temperature" />

                                </androidx.constraintlayout.widget.ConstraintLayout>

                                <TextView
                                    android:id="@+id/temperatureText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="1dp"
                                    android:text="Temperature"
                                    android:textAlignment="center"
                                    android:textSize="20dp"
                                    android:textStyle="bold" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:layout_weight="0.5"
                                android:background="@color/weed"
                                android:elevation="3dp"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_margin="25dp"
                                    android:background="@drawable/cirle_backround">

                                    <ImageView
                                        android:id="@+id/waterPumpImage"
                                        android:layout_width="100dp"
                                        android:layout_height="100dp"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        app:srcCompat="@drawable/water_pumps" />

                                </androidx.constraintlayout.widget.ConstraintLayout>

                                <ToggleButton
                                    android:id="@+id/waterPumpStatus"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_margin="10dp"
                                    android:background="@drawable/dashboard_button"
                                    android:text="@string/water_pump_status"
                                    android:textColor="@color/white"
                                    android:textOff="@string/off"
                                    android:textOn="@string/on" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:layout_weight="0.5"
                                android:background="@color/weed"
                                android:elevation="3dp"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_margin="25dp"
                                    android:background="@drawable/cirle_backround">

                                    <ImageButton
                                        android:id="@+id/weatherImage"
                                        android:layout_width="100dp"
                                        android:layout_height="100dp"
                                        android:background="#00000000"
                                        android:scaleType="fitCenter"
                                        app:srcCompat="@drawable/weather"
                                        tools:ignore="MissingConstraints" />

                                </androidx.constraintlayout.widget.ConstraintLayout>

                                <Button
                                    android:id="@+id/weatherText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_margin="10dp"
                                    android:background="@drawable/dashboard_button"
                                    android:text="@string/weather_toggle"
                                    android:textColor="@color/white" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:layout_weight="0.5"
                                android:background="@color/weed"
                                android:elevation="3dp"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_margin="25dp"
                                    android:background="@drawable/cirle_backround">

                                    <ImageView
                                        android:layout_width="100dp"
                                        android:layout_height="100dp"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        app:srcCompat="@drawable/intruder" />

                                </androidx.constraintlayout.widget.ConstraintLayout>

                                <Button
                                    android:id="@+id/intrusionDetector"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_margin="10dp"
                                    android:background="@drawable/dashboard_button"
                                    android:text="@string/intrusionDetector"
                                    android:textColor="@color/white" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_margin="10dp"
                                android:layout_weight="0.5"
                                android:background="@color/weed"
                                android:elevation="3dp"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="100dp"
                                    android:layout_height="100dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_margin="25dp"
                                    android:background="@drawable/cirle_backround">

                                    <ImageButton
                                        android:layout_width="100dp"
                                        android:layout_height="100dp"
                                        android:background="#00000000"
                                        android:scaleType="fitCenter"
                                        app:srcCompat="@drawable/audio"
                                        tools:ignore="MissingConstraints" />

                                </androidx.constraintlayout.widget.ConstraintLayout>

                                <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_margin="10dp"
                                    android:background="@drawable/dashboard_button"
                                    android:text="@string/audioToText"
                                    android:textColor="@color/white" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
